Update the Pillow library
This fixes security vulnerabilities in Pillow.

* CVE-2022-22815
* CVE-2022-22816
* CVE-2022-22817

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ lxml >= 4.6.3, < 5
 cachetools ~= 4.2.1
 icalendar ~= 4.0.7
 oauthlib ~= 3.1.0
-Pillow >= 8.2.0, < 9
+Pillow >= 9.0.0
 python-dateutil ~= 2.8.1
 social-auth-app-django >= 4.0.0, < 5
 social-auth-core >= 4.1.0, < 5
